tests/paczka1/small_fuzzy/10525620.err
Error in line 2: 4kHliD S386 12,7
Error in line 12: aI6f4dR S987 54,3
